      for many builds when upgrading to SCons 3.0
    - Fixed Bug #3027 - "Cross Compiling issue: cannot override ranlib"
    - Fixed Bug #3020 - "Download link in user guide wrong. python setup.py install --version-lib broken"
    - Fixed Bug #2486 - Added SetOption('silent',True) - Previously this value was not allowed to be set.

  From Ibrahim Esmat:
    - Added the capability to build Windows Store Compatible libraries that can be used
      with Universal Windows Platform (UWP) Apps and published to the store

  From Daniel Holth:
    - Add basic support for PyPy (by deleting __slots__ from Node with a
      metaclass on PyPy); wrap most-used open() calls in 'with' statements to
      avoid too many open files.
    - Add __main__.py for `python -m SCons` in case it is on PYTHONPATH.
    - Always use highest available pickle protocol for efficiency.
    - Remove unused command line fallback for the zip tool.

  From Gaurav Juvekar:
    - Fix issue #2832: Expand construction variables in 'chdir' argument of builders. (PR #463)
    - Fix issue #2910: Make --tree=all handle Unicode. (PR #427)
    - Fix issue #2788: Fix typo in documentation example for sconf. (PR #388)

  From Alexey Klimkin:
    - Use memoization to optimize PATH evaluation across all dependencies per
      node. (PR #345)
    - Use set() where it is applicable (PR #344)

  From M. Limber:
    - Fixed msvs.py for Visual Studio Express editions that would report
      "Error  : ValueError: invalid literal for float(): 10.0Exp".

  From Rick Lupton:
    - Update LaTeX scanner to understand \import and related commands

  From Steve Robinson:
    - Add support for Visual Studio 2017.  This support requires vswhere.exe a helper
      tool installed with newer installs of 2017. SCons expects it to be located at
      "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe"
      It can be downloaded separately at     
      https://github.com/Microsoft/vswhere

  From Paweł Tomulik: